--- a/index.html
+++ b/index.html
@@ -4,49 +4,344 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Gastos 2N</title>
-  <link rel="stylesheet" href="css/ui.css" />
+  <style>
+    :root{--blue:#007aff;--bg:#fff;--muted:#6b7280;--border:#e5e7eb}
+    *{box-sizing:border-box} body{margin:0;font-family:-apple-system,BlinkMacSystemFont,"Inter",system-ui,Segoe UI,Roboto}
+    .topbar{position:sticky;top:0;z-index:5;display:flex;align-items:center;gap:10px;padding:10px 14px;border-bottom:1px solid var(--border);background:#fff}
+    .topbar img{height:28px} .topbar h1{font-size:18px;margin:0;font-weight:700;flex:1}
+    .btn{border:none;padding:10px 14px;border-radius:12px;background:#f2f2f7} .btn.primary{background:var(--blue);color:#fff}
+    .btn.small{padding:8px 10px;font-size:13px} .btn.outline{background:#fff;border:1px solid var(--border)}
+    .content{max-width:820px;margin:0 auto;padding:16px}
+    .metric-card{display:grid;grid-template-columns:1fr 1fr;gap:12px;margin:12px 0}
+    .metric{border:1px solid var(--border);border-radius:16px;padding:14px 16px}
+    .metric h2{margin:0 0 4px 0;font-size:22px} .metric p{margin:0;color:var(--muted);font-size:13px}
+    .panel{border:1px solid var(--border);border-radius:16px;padding:14px 16px;margin-top:12px}
+    .muted{color:var(--muted)} .stack{display:flex;gap:8px;flex-wrap:wrap}
+    .tabs{display:flex;gap:8px;margin:10px 0} .tabs .tab{flex:1}
+    pre.log{white-space:pre-wrap;background:#fafafa;border:1px dashed #eaeaea;border-radius:12px;padding:10px;max-height:240px;overflow:auto}
+  </style>
 </head>
 <body>
   <header class="topbar">
-    <img src="assets/2n-logo.svg" class="logo" alt="2N" />
+    <img src="assets/2n-logo.svg" alt="2N" />
     <h1>Gastos 2N</h1>
-    <div class="auth-controls">
+    <div class="stack">
       <button id="btnLogin" class="btn small">Entrar</button>
       <button id="btnLogout" class="btn small outline">Salir</button>
     </div>
   </header>
 
   <main class="content">
+    <!-- Dashboard -->
     <section class="metric-card">
-      <h2 id="totalMes">0 €</h2>
-      <p>Total del mes</p>
+      <div class="metric">
+        <h2 id="totalMes">0,00 €</h2>
+        <p>Total del mes</p>
+      </div>
+      <div class="metric">
+        <h2 id="numTickets">0</h2>
+        <p>Tickets del mes</p>
+      </div>
     </section>
 
-    <section class="actions">
-      <button class="btn primary" id="scanBtn">📸 Escanear ticket</button>
-      <button class="btn" id="voiceBtn">🎤 Añadir por voz</button>
-    </section>
+    <div class="tabs">
+      <button id="scanBtn" class="btn primary tab">📸 Escanear ticket</button>
+      <button id="demoBtn" class="btn tab">➕ Demo</button>
+    </div>
 
     <section class="panel">
-      <h3>Estado</h3>
+      <h3 style="margin:0 0 6px 0">Estado</h3>
       <p id="whoami" class="muted">No autenticado</p>
       <pre id="out" class="log"></pre>
     </section>
   </main>
 
-  <nav class="tabbar">
-    <button class="tab active" id="tabHome">🏠</button>
-    <button class="tab" id="tabScan">📷</button>
-    <button class="tab" id="tabList">🧾</button>
-    <button class="tab" id="tabExport">📁</button>
-    <button class="tab" id="tabSettings">⚙️</button>
-  </nav>
+  <!-- ================= SCRIPTS (MÓDULOS) ================= -->
+  <script type="module">
+    // --------- Firebase (CDN módulos) ----------
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
+    import {
+      getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged
+    } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
+    import {
+      getFirestore, collection, addDoc, serverTimestamp, query, orderBy, getDocs, where
+    } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+    import {
+      getStorage, ref, uploadBytes, getDownloadURL
+    } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-storage.js";
 
-  <!-- Carga de módulos -->
-  <script type="module" src="js/ui.js"></script>
-  <script type="module" src="js/firebase.js"></script>
-  <script type="module" src="js/ocr.js"></script>
-  <script type="module" src="js/voice.js"></script>
-  <script type="module" src="js/export.js"></script>
+    // --------- Helpers UI ----------
+    const $ = (id)=>document.getElementById(id);
+    const log = (m)=>{ const out = $("out"); if(!out) return; out.textContent += (typeof m==="string"?m:JSON.stringify(m,null,2)) + "\n"; };
+    const setTotalMes = (n)=>{ $("totalMes").textContent = new Intl.NumberFormat("es-ES",{minimumFractionDigits:2}).format(n) + " €"; };
+    const setNumTickets = (n)=>{ $("numTickets").textContent = n; };
+
+    // --------- Config Firebase (tu proyecto) ----------
+    const firebaseConfig = {
+      apiKey: "AIzaSyBTK8altmAR-fWqR9BjE74gEGavuiqk1Bs",
+      authDomain: "gastos-2n.firebaseapp.com",
+      projectId: "gastos-2n",
+      storageBucket: "gastos-2n.firebasestorage.app",
+      messagingSenderId: "55010048795",
+      appId: "1:55010048795:web:4fb48d1e0f9006ebf7b1be"
+    };
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
+    const storage = getStorage(app, "gs://gastos-2n.firebasestorage.app");
+
+    // --------- Auth UI ----------
+    $("btnLogin").onclick = async () => {
+      try {
+        const provider = new GoogleAuthProvider();
+        provider.setCustomParameters({ prompt: "select_account" });
+        await signInWithPopup(auth, provider);
+      } catch(e){ log("❌ Login: "+(e.code||e.message)); alert("Error login: "+(e.code||e.message)); }
+    };
+    $("btnLogout").onclick = ()=> signOut(auth);
+
+    onAuthStateChanged(auth, async (user)=>{
+      $("whoami").textContent = user ? `Conectado como ${user.email||user.uid}` : "No autenticado";
+      if (user) { await refrescarDashboard(); }
+    });
+
+    // --------- Guardar gasto + subir foto ----------
+    async function saveExpense({ date, category, provider, notes, amount, file }) {
+      const user = auth.currentUser; if(!user) throw new Error("No autenticado");
+
+      let photoURL = "";
+      if (file) {
+        const yyyyMM = (date ? new Date(date) : new Date()).toISOString().slice(0,7);
+        const safeProv = (provider||"ticket").replace(/[^a-zA-Z0-9-_ ]/g,"").slice(0,40).replace(/\s+/g,"_");
+        const ext = (file.name?.split(".").pop()||"jpg").toLowerCase();
+        const filename = `${(date?new Date(date):new Date()).toISOString().slice(0,10)}_${safeProv}_${Date.now()}.${ext}`;
+        const path = `tickets/${user.uid}/${yyyyMM}/${filename}`;
+        const r = ref(storage, path);
+        await uploadBytes(r, file);
+        photoURL = await getDownloadURL(r);
+      }
+
+      const col = collection(db, `users/${user.uid}/entries`);
+      await addDoc(col, {
+        date: date ? new Date(date) : new Date(),
+        category: category || "varios",
+        provider: provider || "",
+        notes: notes || "",
+        amount: Number(amount || 0),
+        photoURL,
+        isExpense: (category || "varios") !== "ingreso",
+        createdAt: serverTimestamp()
+      });
+
+      return { ok:true, photoURL };
+    }
+
+    // --------- Dashboard sencillo (mes actual) ----------
+    async function refrescarDashboard(){
+      const user = auth.currentUser; if(!user) return;
+      const now = new Date();
+      const y = now.getFullYear(); const m = String(now.getMonth()+1).padStart(2,"0");
+      const monthStart = new Date(`${y}-${m}-01T00:00:00`);
+      const nextMonth = new Date(`${m==="12" ? y+1 : y}-${m==="12" ? "01" : String(Number(m)+1).padStart(2,"0")}-01T00:00:00`);
+
+      // Firestore: por simplicidad, leeremos todo y filtramos por fecha local (si quisieras optimizar, guarda un campo yyyymm y filtra por él)
+      const col = collection(db, `users/${user.uid}/entries`);
+      const q = query(col, orderBy("createdAt","desc"));
+      const snap = await getDocs(q);
+
+      let total = 0, count = 0;
+      snap.forEach(doc=>{
+        const d = doc.data();
+        if(!d.isExpense) return;
+        const dt = d.date?.toDate ? d.date.toDate() : new Date(d.date);
+        if (dt >= monthStart && dt < nextMonth) {
+          total += Number(d.amount||0);
+          count ++;
+        }
+      });
+      setTotalMes(total);
+      setNumTickets(count);
+    }
+
+    // ===================== OCR (Gemini) =====================
+
+    function getApiKey(){
+      let k = localStorage.getItem("gkey");
+      if(!k){
+        k = prompt("Pega tu API Key de Google AI (Gemini):");
+        if (k && k.trim()){ localStorage.setItem("gkey", k.trim()); alert("API Key guardada ✅"); }
+        else throw new Error("No hay API Key");
+      }
+      return k.trim();
+    }
+
+    function fileToBase64(file){
+      return new Promise((resolve,reject)=>{
+        const rd = new FileReader();
+        rd.onerror = ()=>reject(new Error("No se pudo leer la imagen"));
+        rd.onload = ()=> resolve(String(rd.result).split(",")[1] || "");
+        rd.readAsDataURL(file);
+      });
+    }
+
+    function safeParseJSON(text){
+      if(!text) throw new Error("Salida vacía de la IA");
+      let cleaned = text.trim();
+      if(cleaned.startsWith("```")){
+        cleaned = cleaned.replace(/^```(?:json)?/i,"").replace(/```$/i,"").trim();
+      }
+      const a = cleaned.indexOf("{"); const b = cleaned.lastIndexOf("}");
+      if (a!==-1 && b!==-1 && b>a) cleaned = cleaned.slice(a,b+1);
+      return JSON.parse(cleaned);
+    }
+
+    function normalizeAmount(val){
+      if(val==null) return 0;
+      let s = String(val).trim().replace(/[€$]/g,"").replace(/\s/g,"").replace(",",".");
+      s = s.replace(/[^\d.\-]/g,"");
+      const n = Number(s);
+      return isFinite(n) ? n : 0;
+    }
+    function normalizeDate(val){
+      if(!val) return new Date();
+      if(/^\d{4}-\d{2}-\d{2}$/.test(val)){
+        const d = new Date(val+"T00:00:00"); if(!isNaN(d)) return d;
+      }
+      const d2 = new Date(val); return isNaN(d2) ? new Date() : d2;
+    }
+
+    async function callGeminiVision(base64, mime){
+      const key = getApiKey();
+
+      const prompt = `
+Extrae JSON del ticket con esta estructura exacta:
+{
+  "date": "YYYY-MM-DD",
+  "provider": "Nombre del local o concepto",
+  "amount": 0.00
+}
+Reglas:
+- No añadas texto fuera del JSON.
+- Usa punto como decimal.
+- Si falta un dato, déjalo vacío ("") o 0.00.
+`;
+
+      const body = {
+        contents: [{
+          role: "user",
+          parts: [
+            { text: prompt },
+            { inlineData: { mimeType: mime || "image/jpeg", data: base64 } }
+          ]
+        }]
+      };
+
+      // Fallback de modelos compatibles con v1 (sin generationConfig/responseMimeType)
+      const models = ["gemini-1.5-flash","gemini-1.5-pro","gemini-2.0-flash"];
+      let lastErr;
+      for (const model of models){
+        const url = `https://generativelanguage.googleapis.com/v1/models/${model}:generateContent?key=${encodeURIComponent(key)}`;
+        try{
+          log({ probando_modelo:model, endpoint:url });
+          const res = await fetch(url, {
+            method:"POST", headers:{ "Content-Type":"application/json" }, body: JSON.stringify(body)
+          });
+          const raw = await res.text();
+          let json = null; try { json = JSON.parse(raw); } catch {}
+          if (!res.ok){
+            lastErr = new Error(json?.error?.message || `HTTP ${res.status}`);
+            log({ fallo_modelo:model, status:res.status, body: json || raw });
+            continue;
+          }
+          const text = json?.candidates?.[0]?.content?.parts?.[0]?.text ?? json?.text ?? raw;
+          const parsed = safeParseJSON(text);
+          log({ modelo_ok:model });
+          return parsed;
+        }catch(e){
+          lastErr = e; log({ excepcion_modelo:model, error:e.message||String(e) });
+        }
+      }
+      throw lastErr || new Error("No hay modelos disponibles para tu API key.");
+    }
+
+    // Cámara (modo A: foto)
+    let hiddenInput;
+    function ensureCameraInput(){
+      if(hiddenInput) return hiddenInput;
+      hiddenInput = document.createElement("input");
+      hiddenInput.type = "file";
+      hiddenInput.accept = "image/*";
+      hiddenInput.capture = "environment"; // cámara trasera en móvil
+      hiddenInput.style.display = "none";
+      document.body.appendChild(hiddenInput);
+      return hiddenInput;
+    }
+
+    async function handleScan(){
+      try{
+        const user = auth.currentUser; if(!user) return alert("Haz login primero");
+        const input = ensureCameraInput();
+        const file = await new Promise((resolve,reject)=>{
+          const onChange = ()=>{
+            input.removeEventListener("change", onChange);
+            if (input.files && input.files[0]) resolve(input.files[0]);
+            else reject(new Error("No se seleccionó imagen"));
+          };
+          input.addEventListener("change", onChange, { once:true });
+          input.click();
+        });
+
+        log(`📷 Imagen: ${file.name||"captura"} (${Math.round(file.size/1024)} KB)`);
+        const b64 = await fileToBase64(file);
+
+        const result = await callGeminiVision(b64, file.type);
+        log({ IA: result });
+
+        const provider = (result?.provider || "").toString().trim().slice(0,80) || "Ticket";
+        const amount = normalizeAmount(result?.amount);
+        const dateObj = normalizeDate(result?.date);
+        const yyyy_mm_dd = dateObj.toISOString().slice(0,10);
+
+        const resp = await saveExpense({
+          date: yyyy_mm_dd,
+          category: "varios",
+          provider,
+          notes: "",
+          amount,
+          file
+        });
+
+        log("✅ Gasto guardado con foto");
+        if (resp?.photoURL) log({ photoURL: resp.photoURL });
+        alert("Ticket escaneado y guardado ✅");
+
+        await refrescarDashboard();
+      }catch(e){
+        console.error(e);
+        log({ error: e.message || String(e), details: e.responseJSON || "" });
+        alert("❌ Error en escaneo: " + (e.message || "desconocido"));
+      }
+    }
+
+    $("scanBtn").addEventListener("click", handleScan);
+
+    // Botón demo -> crea un gasto de 1€ sin foto (para probar conexión)
+    $("demoBtn").addEventListener("click", async ()=>{
+      try{
+        const user = auth.currentUser; if(!user) return alert("Haz login primero");
+        await saveExpense({
+          date: new Date().toISOString().slice(0,10),
+          category: "varios",
+          provider: "Demo",
+          notes: "Gasto de prueba",
+          amount: 1,
+          file: null
+        });
+        log("✅ Gasto demo guardado");
+        await refrescarDashboard();
+      }catch(e){ log(e); alert("Error demo: "+(e.code||e.message)); }
+    });
+
+  </script>
 </body>
 </html>
