--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     .topbar img{height:28px} .topbar h1{font-size:18px;margin:0;font-weight:700;flex:1}
     .btn{border:none;padding:10px 14px;border-radius:12px;background:#f2f2f7;cursor:pointer} .btn.primary{background:var(--blue);color:#fff}
     .btn.small{padding:8px 10px;font-size:13px} .btn.outline{background:#fff;border:1px solid var(--border)}
-    .content{max-width:820px;margin:0 auto;padding:16px}
-    .metric-card{display:grid;grid-template-columns:1fr 1fr;gap:12px;margin:12px 0}
+    .content{max-width:980px;margin:0 auto;padding:16px}
+    .metric-card{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin:12px 0}
     .metric{border:1px solid var(--border);border-radius:16px;padding:14px 16px}
     .metric h2{margin:0 0 4px 0;font-size:22px} .metric p{margin:0;color:var(--muted);font-size:13px}
-    .tabs{display:flex;gap:8px;margin:10px 0} .tabs .tab{flex:1}
+    .tabs{display:flex;gap:8px;margin:10px 0;flex-wrap:wrap}
     .panel{border:1px solid var(--border);border-radius:16px;padding:14px 16px;margin-top:12px}
     .muted{color:var(--muted)} pre.log{white-space:pre-wrap;background:#fafafa;border:1px dashed #eaeaea;border-radius:12px;padding:10px;max-height:240px;overflow:auto}
 
@@ -33,7 +33,14 @@
     .preview{grid-column:1/3;border:1px solid var(--border);border-radius:12px;padding:8px;display:flex;gap:12px;align-items:center}
     .preview img{height:72px;width:auto;border-radius:8px}
     .sheet footer{padding:14px 16px;border-top:1px solid var(--border);display:flex;gap:10px;justify-content:flex-end}
+
+    /* Export */
+    .export-grid{display:grid;grid-template-columns:1fr 1fr;gap:12px}
+    .export-grid .field{height:100%}
   </style>
+  <!-- Librerías para ZIP y descarga de ficheros -->
+  <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.5/dist/FileSaver.min.js"></script>
 </head>
 <body>
   <header class="topbar">
@@ -56,12 +63,33 @@
         <h2 id="numTickets">0</h2>
         <p>Tickets del mes</p>
       </div>
+      <div class="metric">
+        <h2 id="ultimoModelo">—</h2>
+        <p>Modelo OCR activo</p>
+      </div>
     </section>
 
     <div class="tabs">
-      <button id="scanBtn" class="btn primary tab">📸 Escanear ticket</button>
-      <button id="demoBtn" class="btn tab">➕ Demo</button>
+      <button id="scanBtn" class="btn primary">📸 Escanear ticket</button>
+      <button id="demoBtn" class="btn">➕ Demo</button>
+      <button id="expBtn"  class="btn outline">📁 Exportar mes</button>
     </div>
+
+    <!-- Export panel -->
+    <section id="exportPanel" class="panel" style="display:none">
+      <h3 style="margin:0 0 12px 0">Exportación mensual</h3>
+      <div class="export-grid">
+        <div class="field">
+          <label for="expMonth">Mes a exportar</label>
+          <input type="month" id="expMonth" />
+        </div>
+        <div class="field" style="display:flex;gap:8px;align-items:flex-end;flex-wrap:wrap">
+          <button id="btnCSV" class="btn primary">⬇️ CSV plantilla 2N</button>
+          <button id="btnZIP" class="btn">🗜️ ZIP fotos del mes</button>
+        </div>
+      </div>
+      <p class="muted" style="margin-top:8px">El CSV usa separador <b>;</b> y coma decimal, con las columnas oficiales de 2N. El ZIP incluye todas las fotos de tickets del mes.</p>
+    </section>
 
     <section class="panel">
       <h3 style="margin:0 0 6px 0">Estado</h3>
@@ -131,7 +159,7 @@
       getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged
     } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
     import {
-      getFirestore, collection, addDoc, serverTimestamp, query, orderBy, getDocs
+      getFirestore, collection, addDoc, serverTimestamp, query, orderBy, getDocs, where
     } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
     import {
       getStorage, ref, uploadBytes, getDownloadURL
@@ -142,6 +170,7 @@
     const log = (m)=>{ const out = $("out"); if(!out) return; out.textContent += (typeof m==="string"?m:JSON.stringify(m,null,2)) + "\n"; };
     const setTotalMes = (n)=>{ $("totalMes").textContent = new Intl.NumberFormat("es-ES",{minimumFractionDigits:2}).format(n) + " €"; };
     const setNumTickets = (n)=>{ $("numTickets").textContent = n; };
+    const setOCRModel = (name)=>{ $("ultimoModelo").textContent = name || "—"; };
 
     // --------- Config Firebase (tu proyecto) ----------
     const firebaseConfig = {
@@ -169,7 +198,12 @@
 
     onAuthStateChanged(auth, async (user)=>{
       $("whoami").textContent = user ? `Conectado como ${user.email||user.uid}` : "No autenticado";
-      if (user) { await refrescarDashboard(); }
+      if (user) {
+        // por defecto mes actual en export
+        const now = new Date();
+        $("expMonth").value = now.toISOString().slice(0,7);
+        await refrescarDashboard();
+      }
     });
 
     // --------- Guardar gasto + subir foto ----------
@@ -203,7 +237,7 @@
       return { ok:true, photoURL };
     }
 
-    // --------- Dashboard sencillo (mes actual) ----------
+    // --------- Dashboard (mes actual) ----------
     async function refrescarDashboard(){
       const user = auth.currentUser; if(!user) return;
       const now = new Date();
@@ -212,7 +246,7 @@
       const nextMonth = new Date(`${m==="12" ? y+1 : y}-${m==="12" ? "01" : String(Number(m)+1).padStart(2,"0")}-01T00:00:00`);
 
       const col = collection(db, `users/${user.uid}/entries`);
-      const q = query(col, orderBy("createdAt","desc"));
+      const q = query(col, orderBy("date","desc")); // ordenamos por date (guardado como Timestamp)
       const snap = await getDocs(q);
 
       let total = 0, count = 0;
@@ -230,7 +264,6 @@
     }
 
     // ===================== OCR + Revisión =====================
-
     function getApiKey(){
       let k = localStorage.getItem("gkey");
       if(!k){
@@ -240,7 +273,6 @@
       }
       return k.trim();
     }
-
     function fileToBase64(file){
       return new Promise((resolve,reject)=>{
         const rd = new FileReader();
@@ -249,7 +281,6 @@
         rd.readAsDataURL(file);
       });
     }
-
     function safeParseJSON(text){
       if(!text) throw new Error("Salida vacía de la IA");
       let cleaned = text.trim();
@@ -260,7 +291,6 @@
       if (a!==-1 && b!==-1 && b>a) cleaned = cleaned.slice(a,b+1);
       return JSON.parse(cleaned);
     }
-
     function normalizeAmount(val){
       if(val==null) return 0;
       let s = String(val).trim().replace(/[€$]/g,"").replace(/\s/g,"").replace(",",".");
@@ -320,6 +350,7 @@ Reglas:
           }
           const text = json?.candidates?.[0]?.content?.parts?.[0]?.text ?? json?.text ?? raw;
           const parsed = safeParseJSON(text);
+          setOCRModel(model);
           log({ modelo_ok:model });
           return parsed;
         }catch(e){
@@ -357,7 +388,6 @@ Reglas:
     }
     function closeReviewModal(){
       $("reviewModal").classList.remove("open");
-      // Limpieza de URL blob (si quisieras liberar memoria)
       try { if ($("revThumb").src.startsWith("blob:")) URL.revokeObjectURL($("revThumb").src); } catch {}
     }
 
@@ -367,7 +397,6 @@ Reglas:
     $("btnSave").addEventListener("click", async ()=>{
       try{
         const user = auth.currentUser; if(!user) return alert("Haz login primero");
-        // Leer valores del modal
         const dateISO = $("revDate").value || new Date().toISOString().slice(0,10);
         const amount = Number($("revAmount").value || 0);
         const provider = $("revProvider").value.trim();
@@ -418,7 +447,6 @@ Reglas:
         const result = await callGeminiVision(b64, file.type);
         log({ IA: result });
 
-        // Rellenar estado para revisión
         const dateObj = normalizeDate(result?.date);
         reviewState.file = file;
         reviewState.provider = (result?.provider || "").toString().trim().slice(0,80) || "Ticket";
@@ -434,7 +462,6 @@ Reglas:
         alert("❌ Error en escaneo: " + (e.message || "desconocido"));
       }
     }
-
     $("scanBtn").addEventListener("click", handleScan);
 
     // Botón demo -> crea un gasto de 1€ sin foto (para probar conexión)
@@ -452,6 +479,180 @@ Reglas:
         log("✅ Gasto demo guardado");
         await refrescarDashboard();
       }catch(e){ log(e); alert("Error demo: "+(e.code||e.message)); }
+    });
+
+    // ===================== EXPORTACIÓN =====================
+    const COLUMNS = [
+      "DATE",
+      "CLIENT / PROVIDER",
+      "TOLLS & PARKINGS",
+      "HOTEL",
+      "GASOLINE",
+      "TICKETS TRAVELING",
+      "OTHER TRANSPORTS (Taxi)",
+      "INVITATIONS",
+      "MEALS",
+      "VARIOUS",
+      "TOTAL",
+      "DESCRIPTION"
+    ];
+    const CATEGORY_MAP = {
+      "comida": "MEALS",
+      "transporte": "OTHER TRANSPORTS (Taxi)",
+      "servicios": "VARIOUS",
+      "ocio": "INVITATIONS",
+      "gasolina": "GASOLINE",
+      "peajes": "TOLLS & PARKINGS",
+      "alojamiento": "HOTEL",
+      "varios": "VARIOUS"
+      // "ingreso": no se exporta como gasto
+    };
+
+    function toCSVValue(col, value){
+      // Fechas/texto con comillas; números con coma decimal
+      if (col !== "DATE" && col !== "CLIENT / PROVIDER" && col !== "DESCRIPTION") {
+        if (typeof value === "number") {
+          return value.toFixed(2).replace(".", ",");
+        }
+        const n = Number(value||0);
+        return isFinite(n) ? n.toFixed(2).replace(".", ",") : "0,00";
+      } else {
+        if (value == null) value = "";
+        const s = String(value).replace(/"/g,'""');
+        return `"${s}"`;
+      }
+    }
+
+    function buildCSV(rows, monthlabel, todaylabel){
+      // Cabecera tipo plantilla 2N (ligera)
+      const templateHeader =
+        `,,,,,   EXPENSES REPORT,,,,,,,\n` +
+        `NOM,,Gaston Ortigosa,,,,,,,,,DATE:,,${todaylabel}\n` +
+        `PRENOM:,David,COST CENTER:,7420,,MONTH/YEAR:,,${monthlabel},,,,,,\n` +
+        `,,,,,,,,,,,,\n`;
+
+      const headerRow = COLUMNS.map(h=>`"${h}"`).join(";") + "\n";
+      const headerRow2 = `,,PARKINGS ,,,,,TRAVELING,,,\n`;
+      const dataRows = rows.map(rec => COLUMNS.map(c => toCSVValue(c, rec[c])).join(";")).join("\n");
+      return templateHeader + headerRow + headerRow2 + dataRows + "\n";
+    }
+
+    function monthRange(ym){ // "YYYY-MM" -> [start, end)
+      const start = new Date(ym + "-01T00:00:00");
+      const y = start.getFullYear();
+      const m = start.getMonth();
+      const end = new Date(y, m+1, 1, 0,0,0);
+      return [start, end];
+    }
+
+    async function getEntriesForMonth(ym){
+      const user = auth.currentUser; if(!user) throw new Error("No autenticado");
+      const [start, end] = monthRange(ym);
+      // Filtro por fecha (campo 'date' guardado como Timestamp)
+      const col = collection(db, `users/${user.uid}/entries`);
+      const q = query(col, where("date", ">=", start), where("date", "<", end), orderBy("date","asc"));
+      const snap = await getDocs(q);
+      const list = [];
+      snap.forEach(doc=>{
+        const d = doc.data();
+        const dateObj = d.date?.toDate ? d.date.toDate() : new Date(d.date);
+        list.push({
+          ...d,
+          date: dateObj,
+        });
+      });
+      return list;
+    }
+
+    function toCSVRecords(entries){
+      const rows = [];
+      for (const e of entries){
+        if (e.category === "ingreso") continue; // no exportamos ingresos
+        const colName = CATEGORY_MAP[e.category] || "VARIOUS";
+        const rec = {};
+        COLUMNS.forEach(c => rec[c] = (["DATE","CLIENT / PROVIDER","DESCRIPTION"].includes(c) ? "" : 0.00));
+
+        rec["DATE"] = e.date.toLocaleDateString("es-ES"); // DD/MM/YYYY
+        rec["CLIENT / PROVIDER"] = e.provider || "";
+        rec["DESCRIPTION"] = e.notes || "";
+
+        // Monto a su columna
+        const amount = Number(e.amount||0);
+        if (COLUMNS.includes(colName)) rec[colName] = amount;
+        else rec["VARIOUS"] = amount;
+
+        // TOTAL = suma C..J (índices 2..9)
+        let total = 0;
+        for (let i=2;i<=9;i++) total += Number(rec[COLUMNS[i]]||0);
+        rec["TOTAL"] = total;
+
+        rows.push(rec);
+      }
+      return rows;
+    }
+
+    // ----- Export UI -----
+    $("expBtn").addEventListener("click", ()=>{
+      const p = $("exportPanel");
+      p.style.display = (p.style.display==="none") ? "block" : "none";
+    });
+
+    $("btnCSV").addEventListener("click", async ()=>{
+      try{
+        const ym = $("expMonth").value;
+        if(!ym) return alert("Selecciona un mes (YYYY-MM)");
+        const entries = await getEntriesForMonth(ym);
+        if (entries.length === 0) return alert("No hay gastos en ese mes");
+
+        const rows = toCSVRecords(entries);
+        const monthlabel = new Date(ym+"-01").toLocaleDateString("es-ES",{month:"long",year:"numeric"});
+        const todaylabel = new Date().toLocaleDateString("es-ES");
+
+        const csv = buildCSV(rows, monthlabel, todaylabel);
+        const blob = new Blob([csv], {type:"text/csv;charset=utf-8"});
+        saveAs(blob, `Informe_Gastos_${ym}.csv`);
+        log(`📄 CSV generado (${rows.length} filas)`);
+      }catch(e){
+        console.error(e);
+        alert("Error generando CSV: " + (e.message||""));
+      }
+    });
+
+    $("btnZIP").addEventListener("click", async ()=>{
+      try{
+        const ym = $("expMonth").value;
+        if(!ym) return alert("Selecciona un mes (YYYY-MM)");
+        const entries = await getEntriesForMonth(ym);
+        const photos = entries.filter(e => e.photoURL);
+        if (photos.length === 0) return alert("No hay fotos en ese mes");
+
+        const zip = new JSZip();
+        let ok = 0, fail = 0;
+
+        for (const e of photos){
+          try{
+            const resp = await fetch(e.photoURL);
+            if (!resp.ok) throw new Error("HTTP "+resp.status);
+            const blob = await resp.blob();
+            const d = e.date instanceof Date ? e.date : new Date(e.date);
+            const dateISO = d.toISOString().slice(0,10);
+            const prov = (e.provider||"ticket").toString().replace(/[^a-zA-Z0-9-_ ]/g,"").slice(0,40).replace(/\s+/g,"_");
+            const ext = (blob.type.split("/")[1]||"jpg").toLowerCase();
+            const name = `${dateISO}_${prov}.${ext}`;
+            zip.file(name, blob);
+            ok++;
+          }catch(err){
+            fail++; log({ fallo_descarga_foto: e.photoURL, err: err.message||String(err) });
+          }
+        }
+
+        const out = await zip.generateAsync({type:"blob"});
+        saveAs(out, `Fotos_Gastos_${ym}.zip`);
+        log(`🗜️ ZIP listo: ${ok} fotos OK, ${fail} fallos`);
+      }catch(e){
+        console.error(e);
+        alert("Error creando ZIP: " + (e.message||""));
+      }
     });
 
   </script>
